fix: process stuck due to error stream overflow